Increased toolbar and editors' uppermost bar height into one and a half vertical grid. Removed .row from titlebar in editors. Fixed .heading with .group-mixed to target vertical centering into .group-mixed--right as well.

--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-controller="OmnibarEditorController">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
-      <div class="group-symmetrical row">
+      <div class="group-symmetrical heading">
         <a href class="group-symmetrical--left link-navigation" ng-click="closeEditor()">
           <span class="text-navigation-back">back</span>
         </a>
