--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-controller="TaskEditorController">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
-      <div class="group-symmetrical">
+      <div class="group-symmetrical heading">
         <a href class="group-symmetrical--left link-navigation highlighted">
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-click="endTaskEdit()" ng-bind="titlebarHasText() ? 'save' : 'back'"></span>
         </a>
