Use .large instead of .heading to set height for .group-symmetrical in toolbar and titlebar. Children of .group-symmetrical now inherit height.

--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -1,4 +1,4 @@
-<div class="container-toolbar--inner swiper-no-swiping group-symmetrical heading" ng-controller="ToolbarController">
+<div class="container-toolbar--inner swiper-no-swiping group-symmetrical large" ng-controller="ToolbarController">
   <button class="group-symmetrical--left btn" type="button" ng-click="toggleMenu()" alt="menu">
     <span class="text-menu"></span>
   </button>
