--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -45,6 +45,7 @@
   <script src="static/common/editableFieldContainerDirective.js"></script>
   <script src="static/common/editableFieldDeactivateDirective.js"></script>
   <script src="static/common/editableFieldDirective.js"></script>
+  <script src="static/common/editableFieldReFocusDirective.js"></script>
   <script src="static/common/iconCheckboxDirective.js"></script>
   <script src="static/common/includeReplaceDirective.js"></script>
   <script src="static/common/loadingAnimationDirective.js"></script>
