Keyboard stays up on login. NOTE: when logging in, swiper is broken

--- a/frontend/core/src/main/webapp/static/app/entry/entryMain.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryMain.html
@@ -38,27 +38,25 @@
 </form>
 <!-- LOGIN -->
 <form ng-if="entryState === 'login'" name="loginForm">
-  <section class="container-content">
-    <header class="group-symmetrical" >
-      <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation">
+  <section class="container-content" editable-field-container>
+    <header class="group-symmetrical">
+      <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation" editable-field-deactivate>
         <span class="text-navigation-back">back</span>
       </a>
-      <a href ng-click="swipeToForgot()" class="group-symmetrical--right link-navigation">
+      <a href ng-click="swipeToForgot()" class="group-symmetrical--right link-navigation" editable-field-deactivate>
         <span class="text-navigation-forward">forgot?</span>
       </a>
     </header>
     <h2 class="group-heading row">log in</h2>
-    <div editable-field-container="sticky">
-      <input class="row" type="email" name="email" ng-model="user.username"
-      placeholder="enter email&#8230;" focusable="registerEntryMainEmailInputCallbacks(focus, blur)"
-      editable-field required />
-      <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" editable-field required />
-      <div class="group-mixed">
-        <div class="group-mixed--left">
-          <input type="checkbox" editable-field ng-model="user.remember" ng-true-value="true" icon-checkbox="loginFormRemember" />
-        </div>
-        <span class="group-mixed--middle">remember</span>
+    <input class="row" type="email" name="email" ng-model="user.username"
+    placeholder="enter email&#8230;" focusable="registerEntryMainEmailInputCallbacks(focus, blur)"
+    editable-field="{{useStickyInputs && 'sticky'}}" required />
+    <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" editable-field="{{useStickyInputs && 'sticky'}}" required />
+    <div class="group-mixed">
+      <div class="group-mixed--left">
+        <input type="checkbox" editable-field ng-model="user.remember" ng-true-value="true" icon-checkbox="loginFormRemember" />
       </div>
+      <span class="group-mixed--middle">remember</span>
     </div>
     <div class="group-error row">
       <div ng-if="loginForm.email.$touched" ng-messages="loginForm.email.$error">
@@ -71,8 +69,8 @@
       <span ng-if="entryOffline" class="text-error">can't connect to server. are you online?</span>
     </div>
   </section>
-  <footer class="container-content--after group-btn" editable-field-container="active">
-    <button editable-field-re-focus type="submit" class="btn-action" ng-disabled="!loginForm.$valid" ng-click="logIn()">
+  <footer class="container-content--after group-btn" editable-field-container="auto">
+    <button type="submit" class="btn-action" ng-disabled="!loginForm.$valid" ng-click="logIn()">
       <span class="text-btn">done</span>
     </button>
   </footer>
