--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -8,8 +8,8 @@
       editable-field-container-clicked-elsewhere="clickedElsewhere()">
         <div class="group-mixed--middle">
           <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
-          editable-field placeholder="add item&#8230;" maxlength="128"
-          focusable="registerAddItemCallbacks(focus, blur)">
+          editable-field editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)"
+          placeholder="add item&#8230;" maxlength="128">
           </textarea>
         </div>
         <div class="group-mixed--right">
