--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -9,7 +9,8 @@
 
       <form role="form" class="group-mixed" autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
-          <textarea type="text" ng-model="titlebar.text" ng-keydown="omnibarTitlebarTextKeyDown($event)" focusable="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="search/addTODO&#8230;" maxlength="128" required ></textarea>
+          <textarea type="text" ng-model="titlebar.text" ng-keydown="omnibarTitlebarTextKeyDown($event)" editable-field
+          editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="search/addTODO&#8230;" maxlength="128" required ></textarea>
         </div>
       </form>
     </div>
