--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -12,7 +12,8 @@
 
       <form role="form" class="group-mixed" autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
-          <textarea type="text" ng-model="titlebar.text" ng-keydown="noteTitlebarTextKeyDown($event)" focusable="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="add note&#8230;" maxlength="128" required ></textarea>
+          <textarea type="text" ng-model="titlebar.text" ng-keydown="noteTitlebarTextKeyDown($event)" editable-field
+          editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="add note&#8230;" maxlength="128" required ></textarea>
         </div>
       </form>
     </div>
