--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -8,8 +8,8 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
   </div>
   <div class="group-mixed--middle">
     <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
-    editable-field placeholder="add task&#8230;" maxlength="128"
-    focusable="registerAddItemCallbacks(focus, blur)">
+    editable-field editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)"
+    placeholder="add task&#8230;" maxlength="128">
     </textarea>
   </div>
   <div class="group-mixed--right">
