--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -5,49 +5,49 @@
       <!-- Set editable-field-container to child to circumvent AngularJS error https://docs.angularjs.org/error/$compile/multidir -->
       <div class="swiper-wrapper">
         <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="0" swiper-slide-duplicate="true">
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][0].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][1].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][2].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][3].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][4].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][5].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][6].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
         </div>
         <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="1" swiper-slide-loop-start="true">
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][0].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][1].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][2].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][3].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][4].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][5].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][6].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
         </div>
         <div class="swiper-slide group-link" swiper-slide="datepicker/middle" slide-index="2">
-          <a href ng-click="changeDaySlide(datepickerWeeks[1][0].yyyymmdd)">{{datepickerWeeks[1][0].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[1][1].yyyymmdd)">{{datepickerWeeks[1][1].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[1][2].yyyymmdd)">{{datepickerWeeks[1][2].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[1][3].yyyymmdd)">{{datepickerWeeks[1][3].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[1][4].yyyymmdd)">{{datepickerWeeks[1][4].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[1][5].yyyymmdd)">{{datepickerWeeks[1][5].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[1][6].yyyymmdd)">{{datepickerWeeks[1][6].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[1][0].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[1][0].yyyymmdd)">{{datepickerWeeks[1][0].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[1][1].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[1][1].yyyymmdd)">{{datepickerWeeks[1][1].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[1][2].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[1][2].yyyymmdd)">{{datepickerWeeks[1][2].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[1][3].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[1][3].yyyymmdd)">{{datepickerWeeks[1][3].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[1][4].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[1][4].yyyymmdd)">{{datepickerWeeks[1][4].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[1][5].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[1][5].yyyymmdd)">{{datepickerWeeks[1][5].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[1][6].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[1][6].yyyymmdd)">{{datepickerWeeks[1][6].displayDateShort}}</a>
         </div>
         <div class="swiper-slide group-link" swiper-slide="datepicker/right" slide-index="3">
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][0].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][0].yyyymmdd)">{{datepickerWeeks[2][0].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][1].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][1].yyyymmdd)">{{datepickerWeeks[2][1].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][2].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][2].yyyymmdd)">{{datepickerWeeks[2][2].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][3].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][3].yyyymmdd)">{{datepickerWeeks[2][3].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][4].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][4].yyyymmdd)">{{datepickerWeeks[2][4].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][5].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][5].yyyymmdd)">{{datepickerWeeks[2][5].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[2][6].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[2][6].yyyymmdd)">{{datepickerWeeks[2][6].displayDateShort}}</a>
         </div>
         <div class="swiper-slide group-link" swiper-slide="datepicker/first" slide-index="4" swiper-slide-duplicate="true">
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
-          <a href ng-click="changeDaySlide(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][0].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][0].yyyymmdd)">{{datepickerWeeks[0][0].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][1].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][1].yyyymmdd)">{{datepickerWeeks[0][1].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][2].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][2].yyyymmdd)">{{datepickerWeeks[0][2].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][3].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][3].yyyymmdd)">{{datepickerWeeks[0][3].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][4].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][4].yyyymmdd)">{{datepickerWeeks[0][4].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][5].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][5].yyyymmdd)">{{datepickerWeeks[0][5].displayDateShort}}</a>
+          <a href ng-class="isDayActive(datepickerWeeks[0][6].yyyymmdd) && 'datepicker-active-day'" ng-click="changeDaySlide(datepickerWeeks[0][6].yyyymmdd)">{{datepickerWeeks[0][6].displayDateShort}}</a>
         </div>
       </div>
     </div>
