--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -12,7 +12,7 @@
     <a href class="group-symmetrical--left link-navigation highlighted" ng-click="customToolbar.leftActionFn()">
       <span ng-bind="customToolbar.leftActionName"></span>
     </a>
-    <div class="group-symmetrical--middle" ng-bind="customToolbar.middleActionName" ng-click="customToolbar.middleActionFn()"></div>
+    <div class="group-symmetrical--middle" ng-bind="customToolbar.getMiddleActionName()" ng-click="customToolbar.middleActionFn()"></div>
     <a href class="group-symmetrical--right link-navigation highlighted" ng-click="customToolbar.rightActionFn()">
       <span ng-bind="customToolbar.rightActionName"></span>
     </a>
