--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -1,5 +1,5 @@
 <div class="container-toolbar--inner">
-  <div ng-hide="isCustomToolbar()" class="swiper-no-swiping group-symmetrical large" ng-controller="ToolbarController">
+  <div ng-hide="isCustomToolbar()" class="swiper-no-swiping group-symmetrical height-large" ng-controller="ToolbarController">
     <button class="group-symmetrical--left btn" type="button" ng-click="toggleMenu()" alt="menu">
       <span class="text-menu"></span>
     </button>
@@ -8,7 +8,7 @@
       <span class="text-logo"></span>
     </button>
   </div>
-  <div ng-show="isCustomToolbar()" class="group-symmetrical large">
+  <div ng-show="isCustomToolbar()" class="group-symmetrical height-large">
     <a href class="group-symmetrical--left link-navigation highlighted" ng-click="customToolbar.leftActionFn()">
       <span ng-bind="customToolbar.leftActionName"></span>
     </a>
