--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -1,9 +1,10 @@
 <div class="container-fluid" ng-controller="NoteEditorController">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
-      <div class="group-symmetrical large">
+      <div class="group-symmetrical height-large">
         <a href class="group-symmetrical--left link-navigation">
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-click="endNoteEdit()" ng-bind="titlebarHasText() ? 'save' : 'back'"></a>
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-click="endNoteEdit()" ng-bind="titlebarHasText() ? 'save' : 'back'">
+          </a>
         </a>
         <div class="group-symmetrical--right">
           <a href ng-click="deleteNoteInEdit()">delete</a>
