--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -10,11 +10,13 @@
   </div>
   <div ng-show="isCustomToolbar()" class="group-symmetrical height-large">
     <a href class="group-symmetrical--left link-navigation highlighted" ng-click="customToolbar.leftActionFn()">
-      <span ng-bind="customToolbar.leftActionName"></span>
+      <span class="text-navigation" ng-bind="customToolbar.leftActionName"></span>
     </a>
-    <div class="group-symmetrical--middle width-large" ng-bind="customToolbar.getMiddleActionName()" ng-click="customToolbar.middleActionFn()"></div>
+    <div class="group-symmetrical--middle width-large" ng-click="customToolbar.middleActionFn()">
+      <span class="text-heading-primary" ng-bind="customToolbar.getMiddleActionName()"></span>
+    </div>
     <a href class="group-symmetrical--right link-navigation highlighted" ng-click="customToolbar.rightActionFn()">
-      <span ng-bind="customToolbar.rightActionName"></span>
+      <span class="text-navigation" ng-bind="customToolbar.rightActionName"></span>
     </a>
   </div>
 </div>
