Datepicker:  * Replaced toggle datepicker with open|close datepicker to make it work with click elsewhere.  * Show weekdays in datepicker.  * Use ng-if to show custom toolbar instead of ng-show
Other:
 * Added getShorWeekdayNames function.
 * .text-details if downplayed by default

--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -8,7 +8,7 @@
       <span class="text-logo"></span>
     </button>
   </div>
-  <div ng-show="isCustomToolbar()" class="group-symmetrical height-large">
+  <div ng-if="isCustomToolbar()" class="group-symmetrical height-large" editable-field-container="auto">
     <a href class="group-symmetrical--left link-navigation highlighted" ng-click="customToolbar.leftActionFn()">
       <span class="text-navigation" ng-bind="customToolbar.leftActionName"></span>
     </a>
