Vertical resize fixes. Only one element at a time and override it in focus tasks.

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -1,4 +1,4 @@
-<div class="container-content--outer" list-container drawer-handle="left">
+<div class="container-content--outer" list-container drawer-handle="left" list-container-override-vertical-resize="true">
   <section class="container-content" ng-controller="DatesController">
 
     <div ng-if="datepickerVisible" class="swiper-container datepicker" swiper-container="datepicker" swiper-type="main" expected-slides="5" data-snap-ignore="true">
