--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -13,6 +13,9 @@
         <div ng-if="isFeatureLoaded('lists')" ng-include="'static/app/lists/listsSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('list')" ng-include="'static/app/lists/listSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
+        <div ng-if="syncState === 'active'" class="container-fluid--inner">
+          <div class="loading-animation" loading-animation></div>
+        </div>
       </div>
       <div toaster="primary"></div>
     </div>
